feat(logging): migrate to slf4j2